DAQ-5242 plugs resource leaks / reacts to sonar
* Try with resources applied to Closeable resources
   which would otherwise leak

* Refactoring changes in response to sonar warnings

Change-Id: Ia07050fd2c29b88015a1b333fac952008649a7da